--- a/snippy.env.yaml
+++ b/snippy.env.yaml
@@ -62,7 +62,7 @@ dependencies:
   - libgomp=12.2.0=h65d4601_19
   - libiconv=1.17=h166bdaf_0
   - libnghttp2=1.47.0=hdcd2b5c_1
-  - libnsl=2.0.0=h7f98852_0
+  - libnsl=2.0.1
   - libopenblas=0.3.21=pthreads_h78a6416_3
   - libpng=1.6.38=h753d276_0
   - libsqlite=3.39.4=h753d276_0
@@ -110,7 +110,7 @@ dependencies:
   - perl-encode-locale=1.05=pl5321hdfd78af_7
   - perl-exception-class=1.45=pl5321hdfd78af_0
   - perl-exporter=5.72=pl5321hdfd78af_2
-  - perl-extutils-makemaker=6.66=0
+  - perl-extutils-makemaker=7.36
   - perl-file-listing=6.15=pl5321hdfd78af_0
   - perl-file-slurp-tiny=0.004=pl5321hdfd78af_2
   - perl-file-sort=1.01=pl5321hdfd78af_3
@@ -154,7 +154,7 @@ dependencies:
   - perl-www-robotrules=6.02=pl5321hdfd78af_4
   - perl-xml-dom=1.46=pl5321hdfd78af_1
   - perl-xml-dom-xpath=0.14=pl5321hdfd78af_2
-  - perl-xml-parser=2.44=4
+  - perl-xml-parser=2.44_01
   - perl-xml-regexp=0.04=pl5321hdfd78af_3
   - perl-xml-xpathengine=0.14=pl5321hdfd78af_3
   - pip=22.3.1=pyhd8ed1ab_0
